# laptop-prediction

./: README.md  pyproject.toml  requirements.txt  stats.json
conf/base/: catalog.yml  parameters_data_processing.yml  parameters_modeling.yml
src/laptop_prediction/: __init__.py  __main__.py  settings.py
src/laptop_prediction/pipelines/data_processing/: nodes.py  pipeline.py
src/laptop_prediction/pipelines/modeling/: __init__.py  nodes.py  pipeline.py
src/tests/pipelines/data_processing/: test_pipeline.py
src/tests/pipelines/modeling/: test_pipeline.py
