[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "laptop_prediction"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
laptop-prediction = "laptop_prediction.__main__:main"

[tool.kedro]
package_name = "laptop_prediction"
project_name = "laptop-prediction"
kedro_init_version = "0.19.4"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "laptop_prediction.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
